# comunicados-aguas-do-rio-rust

./: .gitignore  Cargo.toml
src/: error.rs  main.rs  news_post.rs  telegram_bot.rs
src/database/: mod.rs
src/scrapers/: aguas_do_rio_scraper.rs  cedae_scraper.rs  igua_scraper.rs  mod.rs  rio_saneamento_scraper.rs
