[package]
name = "comunicados-aguas-do-rio-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
chrono = "0.4.38"
dotenv = "0.15.0"
lazy_static = "1.5.0"
regex = "1.11.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "=0.20.0"
serde = "1.0.210"
sha1 = "0.10.6"
telegram-bot-api = "0.1.2"
tokio = "1.40.0"
